Fixed issue in chip with multiline items spacing

--- a/packages/exmg-chip-input/src/styles/exmg-chip-input.scss
+++ b/packages/exmg-chip-input/src/styles/exmg-chip-input.scss
@@ -8,3 +8,9 @@
   font-weight: 500;
   margin-bottom: 0.5rem;
 }
+
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.3rem;
+}
